syntax = "proto3";

package stock;

option go_package = "common/internal/api/stock";

service StockService {
    rpc SaveProduct(SaveProductRequest) returns (SaveProductResponse);
    rpc IncreaseStockQuantity(IncreaseStockQuantityRequest) returns (IncreaseStockQuantityResponse);
    rpc GetStockInfo(GetStockInfoRequest) returns (GetStockInfoResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message Stock {
    int64 product_id = 1;
    string product_name = 2;
    int64 product_price = 3;
    int64 quantity = 4;
}

message SaveProductRequest {
    string token = 1;
    optional int64 product_id = 2;
    string product_name = 3;
    int64 product_price = 4;
}

message SaveProductResponse { Stock stock = 1; }

message IncreaseStockQuantityRequest {
    string token = 1;
    int64 product_id = 2;
    int64 quantity_delta = 3;
}

message IncreaseStockQuantityResponse { Stock stock = 1; }

message GetStockInfoRequest {
    string token = 1;
    int64 product_id = 2;
}

message GetStockInfoResponse { Stock stock = 1; }

message DeleteProductRequest {
    string token = 1;
    int64 product_id = 2;
}

message DeleteProductResponse {}
